Refactoring
1. api returns many class and many has helper methods s() and reduce()
2. tests